kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: accelerator
                operator: In
                values:
                - nvidia-t4 # 🌟元の正しい値に戻す
      # 🔽 ここから追加
      tolerations:
      - key: "color"          # ノードのTaintのキー
        operator: "Equal"
        value: "blue"         # ノードのTaintの値
        effect: "NoSchedule"  # ノードのTaintの効果
      # 🔼 ここまで追加
      containers:
      - name: nginx
        image: nginx:1.25.3
        ports:
        - containerPort: 80
