kubernetes/dummy-energy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-energy-app
  namespace: monitoring
  labels:
    app: dummy-energy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-energy-app
  template:
    metadata:
      labels:
        app: dummy-energy-app
      annotations:
        # 🌟Prometheusにこのポッドからデータを集めるよう指示する設定
        prometheus.io/scrape: "true"
        prometheus.io/port: "9898"
    spec:
      containers:
      - name: web
        image: stefanprodan/podinfo:6.3.5
        ports:
        - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-energy-app
  namespace: monitoring
spec:
  ports:
  - port: 9898
    targetPort: 9898
  selector:
    app: dummy-energy-app
