kubernetes/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-manifest-test
  labels:
    app: my-nginx
spec:
  replicas: 2              # コンテナを常に2駆動させる指定
  selector:
    matchLabels:
      app: my-nginx        # このラベルを持つPodを管理する
  template:
    metadata:
      labels:
        app: my-nginx      # 生まれるPodに貼るラベル
    spec:
      containers:
      - name: nginx-container
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-manifest-service
spec:
  type: NodePort           # 外部公開する設定
  ports:
  - port: 80               # Serviceが受けるポート
    targetPort: 80         # コンテナ側のポート
    nodePort: 30080        # 【固定】外線からアクセスするポート（30000-32767の間）
  selector:
    app: my-nginx          # どのラベルが貼られたPodに通信を届けるかの指定
